package com.mgriffin.command;

public interface ProcessCompletedCallback {
    void onProcessCompleted ();
}
