@startuml

interface ProcessCompletedCallback {
    void onProcessCompleted()
}


class OrderClient {
    registerCompletedCallback (ProcessCompletedCallback):void
    onProcessCompleted ():void
}

class Anonymous <<lambda>>

class OrderServer

OrderClient --> "0..1" ProcessCompletedCallback
Anonymous ..|> ProcessCompletedCallback
Anonymous --> "0..1" OrderServer
@enduml